fix(FE): fix overlap with message actions

--- a/Reenbit-test-task.FE/src/app/features/chats/chat-actions/chat-actions.component.css
+++ b/Reenbit-test-task.FE/src/app/features/chats/chat-actions/chat-actions.component.css
@@ -1,5 +1,6 @@
 :host {
   font-size: 0;
+  z-index: 10;
 }
 
 .activator-button {
